--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,31 +1,37 @@
 #-------------------------------
 # General Site Settings
-title: Zolan
-logo: logo.svg # You can add own logo.
+title: comicplan
+subtitle: Eventos del mundo del cómic en España
+#logo: logo.svg # You can add own logo.
+logo: logo_comic.png # You can add own logo.
 description: Zolan is modern minimal theme for Jekyll
 
 
 #-------------------------------
 # Author Settings
 author:
-  name: Alex Rodriguez
-  image: 01.jpg
-  say-hello: Hello, I’m <strong>Alex Rodriguez</strong>
-  bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
+  name: Comicplan
+  image: logo_comicplan.png
+  say-hello: Hola, somos <strong>comicplan.com</strong>
+  bio: Aquí encontraras los <strong>eventos del mundo del cómic</strong> en España y posts referentes a los mismos. Lee mucho y <strong>no te pierdas ningun evento!</strong>
 
 
 #-------------------------------
 # Contact links
-twitter: https://twitter.com/ # Add your Twitter handle
-facebook: https://facebook.com/ # Add your Facebook handle
-dribbble: https://dribbble.com/ # Add your Dribbble handle
-instagram: https://instagram.com/ # Add your Instagram handle
-pinterest: https://pinterest.com/ # Add your Pinterest handle
+#twitter: https://twitter.com/ # Add your Twitter handle
+#facebook: https://facebook.com/ # Add your Facebook handle
+#dribbble: https://dribbble.com/ # Add your Dribbble handle
+chrome: https://comicplan.com # Add your Chrome handle
+whatsapp: https://t.me/comicplan # Add your Telegram handle
+instagram: https://instagram.com/comicplan # Add your Instagram handle
+github: https://github.com/malambra/comicCalendar # Add your
+#pinterest: https://pinterest.com/ # Add your Pinterest handle
 
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example mr-brown
+# To enable the Disqus comment section, uncomment disqus-identifier.
+#disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
